[package]
name = "Raymarcher"
version = "0.1.0"
authors = ["Sebastien CLOLUS <sclolus@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston_window = "0.105.0"
#gfx = "0.18.1"
#gfx_device_gl = "0.16.2"
#glfw_window = "*"
luminance = "0.38"
luminance-glfw = "0.12"
luminance-derive = "*"
wavefront_obj = "*"
cgmath = "*"
fps_counter = "1.0.0"
clap = "2.33.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"